🐞 fix: set toast z-index

--- a/themes/theme-light/src/styles/react-toastify.css
+++ b/themes/theme-light/src/styles/react-toastify.css
@@ -14,3 +14,7 @@
   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15);
   border-radius: 2px;
 }
+
+.Toastify__toast-container {
+  z-index: 1147483648 !important;
+}
